--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,11 @@
 {
   "env": {
     "commonjs": true,
+    "es6": true,
     "jest": true,
     "node": true
   },
-  "extends": [
-    "airbnb-base",
-    "plugin:prettier/recommended"
-  ],
+  "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "globals": {
     "$": true,
     "browser": true
