--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Girma Nigusse <xgirma@gmail.com>",
   "bugs": {
-    "url": "https://github.com/e2e-boilerplate/wd-commonjs-webdriver-manager-jest-expect/issues"
+    "url": "https://github.com/e2e-boilerplate/wd-es-modules-babel-jest-webdriver-manager-jest-expect/issues"
   },
   "dependencies": {
     "chai-as-promised": "7.1.1",
@@ -9,8 +9,15 @@
     "wd": "1.12.1",
     "webdriver-manager": "12.1.7"
   },
-  "description": "WD end-to-end test automation boilerplate. Using Commonjs, Webdriver-Manager, Jest and Expect.",
+  "description": "WD end-to-end test automation boilerplate. Using ES Modules, Babel, Webdriver-Manager, Jest and Expect.",
   "devDependencies": {
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.9.0",
+    "@babel/plugin-transform-runtime": "7.9.0",
+    "@babel/preset-env": "7.9.5",
+    "@babel/register": "7.9.0",
+    "@babel/runtime": "7.9.2",
+    "babel-jest": "25.3.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.1.0",
     "eslint-config-prettier": "6.10.1",
@@ -20,15 +27,15 @@
     "prettier": "2.0.4",
     "pretty-quick": "2.0.1"
   },
-  "homepage": "https://github.com/e2e-boilerplate/wd-commonjs-webdriver-manager-jest-expect#readme",
+  "homepage": "https://github.com/e2e-boilerplate/wd-es-modules-babel-jest-webdriver-manager-jest-expect#readme",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged --allow-empty"
     }
   },
   "keywords": [
+    "babel",
     "boilerplate",
-    "commonjs",
     "e2e",
     "e2e tests",
     "example",
@@ -36,6 +43,7 @@
     "integration test",
     "jest",
     "selenium-webdriver",
+    "ts-jest",
     "wd",
     "webdriver manager"
   ],
@@ -45,10 +53,10 @@
       "prettier --write"
     ]
   },
-  "name": "wd-commonjs-webdriver-manager-jest-expect",
+  "name": "wd-es-modules-babel-jest-webdriver-manager-jest-expect",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/e2e-boilerplate/wd-commonjs-webdriver-manager-jest-expect.git"
+    "url": "git+https://github.com/e2e-boilerplate/wd-es-modules-babel-jest-webdriver-manager-jest-expect.git"
   },
   "scripts": {
     "lint": "npx eslint --ext .js ./ --fix",
