--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "jest",
     "ts-jest",
     "wd",
+    "wd automation",
+    "wd boilerplate",
+    "wd example",
     "webdriver manager",
     "e2e",
     "e2e tests",
